[package]
name = "ckb-cobuild-testvector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "0.112.1"
molecule = "0.7.5"
blake2b-ref = "0.3.1"
rand = "0.8.5"
env_logger = "0.10.1"
log = "0.4.20"
